Made the mobile experience much better. Fixed several layout bugs.

--- a/socket-io-client/src/components/Chat/Chat.scss
+++ b/socket-io-client/src/components/Chat/Chat.scss
@@ -2,7 +2,7 @@
     @extend %flex;
     flex-flow: column;
     width: 100%;
-    height: 89%;
+    height: 100vh;
     background-color: #333;
     position: absolute;
 }
@@ -20,23 +20,27 @@
     font-style: oblique;
     font-weight: 600;
     width: fit-content;
-    height: 2em;
+    // height: 2em;
+    // background-color: pink;
     // color: whitesmoke;
+    // position: relative;
+    bottom: 2.5em;
+    min-width: fit-content;
+    padding: 0 0 0 10px;
     position: absolute;
-    bottom: 3em;
-    @extend %flex;
+    // @extend %flex;
 }
 
 // Message input
 #form {
-    background: rgba(0, 0, 0, 0.15);
+    background: pink;
     padding: 0.25rem;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     display: flex;
-    height: 3rem;
+    height: 4rem;
     box-sizing: border-box;
     // backdrop-filter: blur(10px);
 }
@@ -46,6 +50,8 @@
     flex-grow: 1;
     border-radius: 1rem;
     margin: 0.25rem;
+    height: 2.5em;
+    align-self: flex-end;
 }
 #input:focus {
     outline: none;
@@ -58,12 +64,15 @@
     border-radius: 3px;
     outline: none;
     color: #fff;
+    height: 2.5em;
+    align-self: flex-end;
 }
 #messages {
     list-style-type: none;
     margin: 0.5em .5em 0;
     padding: 0;
     width: 100%;
+    margin-bottom: 4.8em;
 }
 #messages > li {
     padding: 0.5rem;
