--- a/socket-io-client/src/components/WelcomePage/WelcomePage.scss
+++ b/socket-io-client/src/components/WelcomePage/WelcomePage.scss
@@ -23,7 +23,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: baseline;
-    height: 4em;
+    height: 7em;
 }
 #username-input {
     margin: 0.5rem;
@@ -35,7 +35,7 @@
 }
 svg {
     width: 200%;
-    height: 110px;
+    height: 70px;
     fill: #1f1f1f;
     transform: rotate(180deg);
 }
